--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,5 @@
-# Ignore Play! working directory #
-bin/
-/db
-.eclipse
-/lib/
-/logs/
-/modules
-/project/project
-/project/target
-/target
-tmp/
-test-result
-server.pid
-*.eml
-/dist/
-.cache
+/.bsp
+/.idea
+/.idea_modules
+/project/
+/target/
