--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -18,5 +18,5 @@ jobs:
       with:
         java-version: '11'
         distribution: 'adopt'
-    - name: Run tests
-      run: sbt test
+    - name: Build dist
+      run: sbt dist
