--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,7 +1,6 @@
-play.filters.disabled+=play.filters.hosts.AllowedHostsFilter
 slick.dbs.shoper.profile="slick.jdbc.PostgresProfile$"
-slick.dbs.shoper.db.driver="org.h2.Driver"
-slick.dbs.shoper.db.url="jdbc:h2:mem:shoper;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=FALSE"
+slick.dbs.shoper.db.driver="org.postgresql.Driver"
+slick.dbs.shoper.db.url="jdbc:postgresql://localhost:5432/shoper"
 slick.dbs.shoper.db.user=sa
 slick.dbs.shoper.db.password=""
 play.evolutions.autoApply=true
@@ -9,3 +8,6 @@ play.http.secret.key="changeme"
 play.http.secret.key=${?APPLICATION_SECRET}
 http.port=9000
 http.port=${?HTTP_PORT}
+play.filters.hosts {
+  allowed = ["localhost:9000"]
+}
