--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,13 +1,23 @@
 slick.dbs.shoper.profile="slick.jdbc.PostgresProfile$"
 slick.dbs.shoper.db.driver="org.postgresql.Driver"
 slick.dbs.shoper.db.url="jdbc:postgresql://localhost:5432/shoper"
-slick.dbs.shoper.db.user=sa
-slick.dbs.shoper.db.password=""
+slick.dbs.shoper.db.user=shoper
+slick.dbs.shoper.db.password="shoper_password"
 play.evolutions.autoApply=true
 play.http.secret.key="changeme"
 play.http.secret.key=${?APPLICATION_SECRET}
 http.port=9000
 http.port=${?HTTP_PORT}
+
 play.filters.hosts {
   allowed = ["localhost:9000"]
+}
+
+fixedConnectionPool = 9
+db.executor {
+  executor = "thread-pool-executor"
+  throughput = 1
+  thread-pool-executor {
+    fixed-pool-size = ${fixedConnectionPool}
+  }
 }
