--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,5 @@
-logs
-target
 /.bsp
 /.idea
 /.idea_modules
-/.classpath
-/.project
-/.settings
-/RUNNING_PID
-bin/
-/db
-.eclipse
-/lib/
-/logs/
-/modules
-/project/project
-/project/target
-/target
-tmp/
-test-result
-server.pid
-*.eml
-/dist/
-.cache
-/RUNNING_PID
-/null/
-/project/.bloop/
-/.g8/
-/.metals/
-/.bloop/
-/project/metals.sbt
+/project/
+/target/
