--- a/conf/application.conf
+++ b/conf/application.conf
@@ -8,6 +8,7 @@ play.http.secret.key="changeme"
 play.http.secret.key=${?APPLICATION_SECRET}
 http.port=9000
 http.port=${?HTTP_PORT}
+play.assets.cache."/public/javascripts/"="max-age=60"
 
 play.filters.hosts {
   allowed = ["localhost:9000"]
